# Szamitogepes_Grafika

./: .gitignore  Computer_Graphics.sln  UpgradeLog.htm  start
01_background_keyboard/: .gitignore  01_background_keyboard.vcxproj  CMakeLists.txt  Source.cpp  a.out
02_vertex_fragment_shader_primitives/: 02_vertex_fragment_shader_primitives.vcxproj  CMakeLists.txt  MonolithicSource.cpp  Source.cpp  a.out
03_VAO_VBO/: 03_VAO_VBO.vcxproj  03_VAO_VBO.vcxproj.filters  CMakeLists.txt  MonolithicSource.cpp  Source.cpp  fragmentShader.glsl  vertexShader.glsl
03_VAO_VBO/x64/Debug/: 03_VAO_VBO.exe.recipe  03_VAO_VBO.ilk  source.new.obj.enc  vc143.idb
03_VAO_VBO/x64/Debug/03_VAO_VBO.tlog/: 03_VAO_VBO.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
04_MVP_uniform/: 04_MVP_uniform.vcxproj  CMakeLists.txt  MonolithicSource.cpp  Source.cpp  fragmentShader.glsl  vertexShader.glsl
04_MVP_uniform/x64/Debug/: 04_MVP_uniform.exe.recipe  04_MVP_uniform.ilk  vc143.idb
04_MVP_uniform/x64/Debug/04_MVP_uniform.tlog/: 04_MVP_uniform.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
05_geometry_shader/: 05_geometry_shader.vcxproj  BuildHouseGeom.glsl  CMakeLists.txt  GeometryFrag.glsl  GeometryVert.glsl  Source.cpp  SubdivisionGeom.glsl
06_EBO_camera_Z-buffer/: 06_EBO_camera_Z-buffer.vcxproj  CMakeLists.txt  MonolithicSource.cpp  Source.cpp  fragmentShader.glsl  vertexShader.glsl
07_drag-and-drop/: 07_drag-and-drop.vcxproj  MonolithicSource.cpp  Source.cpp  fragmentShader.glsl  vertexShader.glsl
08_tesselation_shader/: 08_tesselation_shader.vcxproj  CMakeLists.txt  CurveTessContShader.glsl  CurveTessEvalShader.glsl  QuadScreenFragShader.glsl  Source.cpp
09_lighting/: 09_lighting.vcxproj  CMakeLists.txt  MonolithicSource.cpp  Source.cpp  fragmentShader.glsl  vertexShader.glsl
10_material/: 10_material.vcxproj  CMakeLists.txt  Source.cpp  fragmentShader.glsl  vertexShader.glsl
11_texturing_skybox/: 11_texturing_skybox.vcxproj  CMakeLists.txt  MonolithicSource.cpp  Source.cpp  fragmentShader.glsl  vertexShader.glsl
12_compute_shader/: 12_compute_shader.vcxproj  CMakeLists.txt  ColorShiftComp.glsl  QuadScreenFrag.glsl  QuadScreenVert.glsl  Source.cpp
13_parametric_surface/: 13_parametric_surface.vcxproj  CMakeLists.txt  MonolithicSource.cpp  Source.cpp  fragmentShader.glsl  vertexShader.glsl
OpenGLTemplate/include/: common.cpp
bezier/: CMakeLists.txt  MonolithicSource.cpp  Source.cpp  bezier.vcxproj  fragmentShader.glsl
bezier/x64/Debug/: bezier.vcxproj.FileListAbsolute.txt
